# mutation-testing-rust

./: Cargo.toml  README.md
src/: main.rs  test-example.wasm
src/candidates/: mod.rs
src/engine/: mod.rs
src/engine/res/cases/: no_mutants.wasm  no_surviving_mutants.rs  no_surviving_mutants.wasm  surviving_mutants.rs  surviving_mutants.wasm
src/mutation/: all_mutators.rs  i32geu_to_gtu_mutator.rs  if_condition_to_false_mutator.rs  if_condition_to_true_mutator.rs  instruction_swapping_mutator.rs  mod.rs  mutation.rs  mutator.rs  set_cancelling_mutator.rs
src/runner/: mod.rs
src/runner/res/cases/: test-example-failing.wasm
